--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 #phone{
   position: absolute;
   top: 50%;
-  margin-top: -415px;
+  margin-top: -45%;
   left: 50%;
   margin-left: -320px;
   width: 640px;
