--- a/css/style.css
+++ b/css/style.css
@@ -11,19 +11,19 @@ html,body{
   margin: 0;
   padding: 0;
 }
-body{
+html{
   background: url(../img/viewbg.jpg) no-repeat center center;
   background-size: cover;
   text-align: center;
 }
 #phone{
   position: absolute;
-  top: 50%;
-  margin-top: -45%;
+  top: 5%;
   left: 50%;
   margin-left: -320px;
   width: 640px;
   padding-bottom: 55px;
+  margin-bottom: 5%;
   height: auto;
   border-radius: 45px;
   background: #f7f7f7;
